[package]
name = "market-maker-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
anyhow = "1.0"
chrono = "0.4"
rand = "0.9"

[lib]
name = "market_maker_simulator"
path = "src/lib.rs"

[[bin]]
name = "market-maker"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1